# libvpack-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  VERIFIED_CAPABILITIES.md
.cursor/rules/: rust-formatting.mdc
.github/workflows/: audit.yml  ci.yml
docs/: release_candidate_file_tree.md
docs/audits/: 01-audit-vtxo.md
docs/specs/: 01-vbip.md
research/audit_data/: AUDIT_SUMMARY.md
research/audit_data/ark_labs/: round_branch_v3.json  round_leaf_v3.json
src/: compact_size.rs  error.rs  export.rs  header.rs  ingredients.rs  json_hex.rs  lib.rs  pack.rs  state.rs  types.rs
src/adapters/: mod.rs  second_tech.rs
src/consensus/: ark_labs.rs  completeness.rs  control_block.rs  mod.rs  second_tech.rs  taproot.rs  taproot_sighash.rs  timelocks.rs  tx_factory.rs
src/dehydration/: envelope.rs  mod.rs  waterfall.rs
src/payload/: mod.rs  reader.rs  tests.rs  tree.rs
tests/: arkade_parity_audit.rs  arkade_v3_anchored_audit.json  bark_decode_native.rs  bark_parse_test.rs  consensus_guard_tests.rs  control_block_tests.rs  crypto_audit_sweep.rs  dehydration_tests.rs  forensic_verification.rs  sighash_audit_tests.rs  smoke_test.rs  taproot_reconstruction.rs  test_main.rs  timelock_proptests.rs  tree_completeness_tests.rs  vpack_state_schema_tests.rs
tests/common/: ingredients_from_json.rs  logic_adapters.rs  mod.rs
tests/conformance/: mod.rs
tests/conformance/vectors/ark_labs/: oor_forfeit_pset.json  round_branch_v3.json  round_leaf_v3.json
tests/conformance/vectors/second/: boarding_v3_borsh.json  oor_v3_borsh.json  round_v3_borsh.json
tests/export_tests/: mod.rs
tests/fixtures/: ark_labs_round_leaf_preimage_hex.txt  second_tech_round1_step0.json
tests/vectors/: README.md  arkd.rs  bark.rs  mod.rs
verifier-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
verifier-web/src/: App.tsx  index.css
verifier-web/src/components/: AnimatedGrid.tsx  ArchetypeHeroCard.tsx  ExitData.tsx  ExportToVpackButton.tsx  ForensicArchive.tsx  GlassCard.tsx  HeroHeader.tsx  MockDataBadge.tsx  ModeTabs.tsx  NetworkSwitcher.tsx  NodeDetailModal.tsx  PrivacyShieldBadge.tsx  ProgressiveVerificationBadge.tsx  PulsingLine.tsx  ReconstructedIdBox.tsx  ResultBadge.tsx  ScenarioDescriptionCard.tsx  ScenarioPicker.tsx  SecureInput.tsx  SettlementToken.tsx  SovereigntyMap.tsx  SovereigntyPath.tsx  VTXOInput.tsx  VectorPill.tsx  VectorPillGroup.tsx  VpackHelpTooltip.tsx  ZeroStateCard.tsx
verifier-web/src/constants/: scenarioStories.ts  vectors.ts
verifier-web/src/contexts/: NetworkContext.tsx  TestModeContext.tsx
verifier-web/src/hooks/: useTypingEffect.ts
verifier-web/src/services/: mempool.ts
verifier-web/src/types/: arkTree.ts  network.ts  verification.ts
verifier-web/src/utils/: exitData.ts  exportVpack.ts  mempoolUrl.ts
verifier-web/src/wasm/: README.md  package.json  wasm_vpack.d.ts  wasm_vpack.js  wasm_vpack_bg.wasm  wasm_vpack_bg.wasm.d.ts
wasm-vpack/: Cargo.toml
wasm-vpack/demo/: index.html
wasm-vpack/demo/vectors/ark_labs/: round_leaf_v3.json
wasm-vpack/demo/vectors/second/: round_v3_borsh.json
wasm-vpack/src/: lib.rs
