[package]
name = "vpack"
version = "1.0.0-rc.1"
edition = "2021"
authors = ["Jon McAlpine"]
description = "A no_std Rust library for the universal serialization and verification of VTXOs."
license = "MIT"
repository = "https://github.com/jgmcalpine/libvpack-rs"
readme = "README.md"
keywords = ["bitcoin", "vtxo", "verification", "layer2", "ark"]
categories = ["cryptography", "no-std", "embedded"]

[dependencies]
# We disable default features to avoid std/rand/secp256k1. Minimal deps for verification only.
bitcoin = { version = "0.32", default-features = false }

# Serialization
borsh = { version = "1.3", default-features = false, features = ["derive"] }

# Parsing (Manual Safety)
byteorder = { version = "1.5", default-features = false }

# Checksum
crc32fast = { version = "1.4", default-features = false }

# Optional features
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
hex = { version = "0.4", default-features = false, features = ["alloc"], optional = true }

[features]
default = ["std"]
std = [
    "bitcoin/std",
    "borsh/std",
    "byteorder/std",
    "crc32fast/std",
    "serde?/std",
]
alloc = []

# Enable JSON adapters (useful for converting Arkd responses)
adapter = ["dep:serde", "dep:hex", "std"]

[dev-dependencies]
borsh = { version = "1.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4" 