[workspace]
members = ["wasm-vpack"]

[package]
name = "vpack"
version = "1.0.0-rc.1"
edition = "2021"
authors = ["Jon McAlpine"]
description = "A no_std Rust library for the universal serialization and verification of VTXOs."
license = "MIT"
repository = "https://github.com/jgmcalpine/libvpack-rs"
readme = "README.md"
keywords = ["bitcoin", "vtxo", "verification", "layer2", "ark"]
categories = ["cryptography", "no-std", "embedded"]

[dependencies]
# Optional: full bitcoin (pulls secp256k1 C lib; not used for wasm32).
bitcoin = { version = "0.32", default-features = false, optional = true }
# Optional: hashes only for wasm (no secp256k1).
bitcoin_hashes = { version = "0.14", default-features = false, optional = true }

# Serialization
borsh = { version = "1.3", default-features = false, features = ["derive"] }

# Parsing (Manual Safety)
byteorder = { version = "1.5", default-features = false }

# Checksum
crc32fast = { version = "1.4", default-features = false }

# Optional features
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
serde_json = { version = "1.0", optional = true }
hex = { version = "0.4", default-features = false, features = ["alloc"], optional = true }

[features]
default = ["std", "bitcoin"]
std = [
    "bitcoin?/std",
    "borsh/std",
    "byteorder/std",
    "crc32fast/std",
    "serde?/std",
]
alloc = []

# Use full bitcoin crate (native builds only; pulls secp256k1).
bitcoin = ["dep:bitcoin"]

# Enable JSON adapters (reconstruction_ingredients -> VPackTree; used by wasm-vpack)
adapter = ["dep:serde", "dep:hex", "dep:serde_json", "std"]

# For wasm32: no bitcoin (no secp256k1); use bitcoin_hashes + minimal types.
wasm = [
    "dep:serde",
    "dep:hex",
    "dep:serde_json",
    "dep:bitcoin_hashes",
    "borsh/std",
    "byteorder/std",
    "crc32fast/std",
    "serde?/std",
]

[dev-dependencies]
borsh = { version = "1.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4" 