[workspace]
members = ["wasm-vpack"]

[package]
name = "vpack"
version = "1.0.0-rc.1"
edition = "2021"
authors = ["Jon McAlpine"]
description = "A no_std Rust library for the universal serialization and verification of VTXOs."
license = "MIT"
repository = "https://github.com/jgmcalpine/libvpack-rs"
readme = "README.md"
keywords = ["bitcoin", "vtxo", "verification", "layer2", "ark"]
categories = ["cryptography", "no-std", "embedded"]

[dependencies]
# Optional: full bitcoin (pulls secp256k1 C lib; not used for wasm32).
bitcoin = { version = "0.32", default-features = false, optional = true }
# Optional: hashes only for wasm (no secp256k1).
bitcoin_hashes = { version = "0.14", default-features = false, optional = true }

# Serialization
borsh = { version = "1.3", default-features = false, features = ["derive"] }

# Parsing (Manual Safety)
byteorder = { version = "1.5", default-features = false }

# Checksum
crc32fast = { version = "1.4", default-features = false }

# Optional features
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
serde_json = { version = "1.0", optional = true }
hex = { version = "0.4", default-features = false, features = ["alloc"], optional = true }

# BIP-340 Schnorr verification (pure Rust; no C linkage for wasm32).
k256 = { version = "0.13", default-features = false, features = ["schnorr"], optional = true }

[features]
default = ["std", "bitcoin", "schnorr-verify", "export-json"]
std = [
    "bitcoin?/std",
    "borsh/std",
    "byteorder/std",
    "crc32fast/std",
    "serde?/std",
]
alloc = []

# Use full bitcoin crate (native builds only; pulls secp256k1).
bitcoin = ["dep:bitcoin"]

# BIP-341 script-path control blocks and Taproot output-key tweaking use `rust-secp256k1` via this
# crate. This is separate from `schnorr-verify` (BIP-340 signature checks via k256 / wasm).
# Control-block APIs are compiled only when `bitcoin` is enabled.

# Enable JSON adapters (reconstruction_ingredients -> VPackTree; used by wasm-vpack)
adapter = ["dep:serde", "dep:hex", "dep:serde_json", "std", "export-json"]

# JSON envelope (VpackState) + serde on export ingredient types (optional for minimal builds).
export-json = ["dep:serde", "dep:hex", "dep:serde_json", "hex/alloc"]

# For wasm32: no bitcoin (no secp256k1); use bitcoin_hashes + minimal types.
wasm = [
    "dep:serde",
    "dep:hex",
    "dep:serde_json",
    "export-json",
    "dep:bitcoin_hashes",
    "borsh/std",
    "byteorder/std",
    "crc32fast/std",
    "serde?/std",
    "schnorr-verify",
]

# BIP-340 Schnorr signature verification + Taproot sighash helpers; uses k256 (pure Rust, wasm-friendly).
# Taproot *output-key tweak* for `bitcoin` builds uses rust-secp256k1 instead (see `compute_taproot_tweak`).
schnorr-verify = ["dep:k256"]

[dev-dependencies]
borsh = { version = "1.3", features = ["derive"] }
hex = "0.4"
k256 = { version = "0.13", default-features = false, features = ["schnorr"] }
proptest = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 